# hookman

./: Cargo.toml  README.md  hookman.toml
.github/workflows/: release.yml  tests.yml
man/man1/: hookman.1
src/: lib.rs  main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
