[package]
name = "hookman"
version = "0.1.4"
edition = "2024"
description = "Add hooks to your Git repository using a TOML file."
readme = "README.md"
license = "MIT"
keywords = ["git", "git-vcs", "git-hooks", "pre-commit", "hookman"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[workspace]
members = [".", "xtask"]
